# pdf_helper_learning

./: Cargo.toml  LICENSE  README.md
.cargo/: config.toml
assets/fonts/: README.md
crates/main/: Cargo.toml
crates/main/src/: main.rs
crates/pdf_helper/: Cargo.toml  GUIDE.md
crates/pdf_helper/examples/: report.rs  report_bookmarks.rs  run_all.rs
crates/pdf_helper/src/: bookmarks.rs  builder.rs  elements.rs  lib.rs  model.rs
crates/pdf_helper/src/examples/: mod.rs  report.rs  report_bookmarks.rs  run_all.rs  shared.rs
crates/pdf_helper/src/fonts/: mod.rs
crates/pdf_helper/tests/: rendering.rs
examples/: report.rs  report_bookmarks.rs  run_all.rs
examples/shared/: report_util.rs
src/: bookmarks.rs  builder.rs  elements.rs  fonts.rs  lib.rs  model.rs  richtext.rs
src/fonts/: mod.rs
tests/: rendering.rs
